<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bluetooth_state"
            android:textSize="20sp" />

        <View
            android:layout_width="0dip"
            android:layout_height="0dip"
            android:layout_weight="1" />

        <ToggleButton
            android:id="@+id/bluetoothswitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bt_content"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/LinearLayout02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            
            <Button
                android:id="@+id/noise_stopper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/app_name"
                android:visibility="gone"
                android:onClick="onClick" >
            </Button>
            
            <Button
                android:id="@+id/discover"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/btn_scan_title"
                android:onClick="onClick" >
            </Button>

            <Button
                android:id="@+id/clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/btn_clear_title"
                android:visibility="gone"
                android:onClick="onClick" >
            </Button>

            <Button
                android:id="@+id/sendbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/btn_send_title"
                android:visibility="gone"
                android:onClick="onClick" >
            </Button>
        </LinearLayout>

        <ListView
            android:id="@+id/btlist"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1" >
        </ListView>

        <EditText
            android:id="@+id/sendedit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:visibility="gone" >
        </EditText>

        <EditText
            android:id="@+id/msgedit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:editable="false"
            android:height="180dp"
            android:maxHeight="280dp"
            android:visibility="gone" >
        </EditText>
    </LinearLayout>
    <TextView
            android:id="@+id/warning"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/warning" />
</LinearLayout>
